refactor: remove all direct Postgres access from frontend, normalize backend API
PART 1 - Frontend DB Removal:
- search.ts: Remove unused Pool import (already used backend API)
- db-test.ts: Proxy to backend /health instead of direct DB query
- answer.ts: Remove Pool, replace cache/chunk queries with backend calls
  - checkAnswerCache() now calls /answer/cache/lookup
  - saveAnswerCache() now calls /answer/cache/save
  - Chunk retrieval now calls /answer/chunks
  - Remove unused generateQueryEmbedding, generateCacheKey functions
  - Update error messages to reference backend instead of database

PART 1 - Backend Endpoints Added:
- POST /answer/cache/lookup - Semantic cache lookup
- POST /answer/cache/save - Save answer with embedding
- POST /answer/chunks - Get RAG chunks via semantic search
- GET /embeddings/models - List available embedding models
- GET /embeddings/active - Get active embedding model

PART 2 - Frontend Env Templates:
- Remove all DATABASE_URL references
- Add note: frontend NEVER connects directly to Postgres
- Update BACKEND_API_URL to production value
- Add ANSWER_* generation settings (max_tokens, temperature, etc.)
- Add RATE_LIMIT_WINDOW and RATE_LIMIT_MAX
- Standardize both .env.example and .env.local.example

PART 3 - Backend REST Normalization:
- Endpoints already follow clean REST patterns
- /stats, /search, /answer, /embed, /health at root level
- /answer/cache/*, /answer/chunks for answer-related operations
- /embeddings/* for embedding model info
- /api/tuning/*, /api/jobs/*, /api/upload/* for admin operations

PART 4 - API Documentation:
- Create backend_API_SCHEMA.md with full endpoint documentation
- Document request/response schemas for all public endpoints
- Group by: Core, Search & Answering, Embeddings, Ingestion, Jobs, Tuning

Architecture: Frontend → Backend API → Postgres
Frontend no longer needs DATABASE_URL or pg package for any operation.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,70 +2,51 @@
 # DR. CHAFFEE AI - FRONTEND ENVIRONMENT VARIABLES
 # =============================================================================
 # Copy this file to .env.local for local development
-# In production (Coolify), set these as Environment Variables in the app settings
+# In production (Coolify/Vercel), set these as Environment Variables
+# 
+# NOTE: The frontend NEVER connects directly to Postgres.
+# All database operations go through the backend API via BACKEND_API_URL.
 # =============================================================================
 
 # =============================================================================
 # BACKEND API (Required)
 # =============================================================================
 # URL to the FastAPI backend service
-# Local development: http://localhost:8001
-# Production: Set to your deployed backend URL (e.g., https://drchaffee-backend.onrender.com)
-BACKEND_API_URL=http://localhost:8001
-
-# =============================================================================
-# DATABASE (Optional - only for answer caching)
-# =============================================================================
-# PostgreSQL connection string with pgvector extension
-# Note: Stats and search now come from the backend via BACKEND_API_URL.
-# DATABASE_URL is only needed for frontend-side answer caching.
-# In production, the backend handles all primary database access.
-# Local: postgresql://postgres:password@localhost:5432/askdrchaffee
-# Production: Set via Coolify environment variables (if using frontend caching)
-# DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
+BACKEND_API_URL=http://46.224.35.133:3000
 
 # =============================================================================
 # OPENAI API (Required for answer generation)
 # =============================================================================
 # Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-proj-your-openai-key-here
+OPENAI_API_KEY=
 
 # Model for answer generation
-# Options: gpt-4o-mini (fast, cheap), gpt-4o (expensive, best quality)
-SUMMARIZER_MODEL=gpt-4o-mini
-
-# =============================================================================
-# ANSWER SETTINGS
-# =============================================================================
-# Enable/disable AI answer generation
-ANSWER_ENABLED=true
-
-# Number of chunks to retrieve for context
-ANSWER_TOPK=100
-
-# Cache TTL in hours (336 = 14 days)
-ANSWER_TTL_HOURS=336
-ANSWER_CACHE_TTL_HOURS=336
-
-# Default answer style: concise or detailed
-ANSWER_STYLE_DEFAULT=concise
-
-# Max clips per style (to control token usage)
-MAX_CLIPS_CONCISE=30
-MAX_CLIPS_DETAILED=100
-
-# =============================================================================
-# RATE LIMITING
-# =============================================================================
-# Requests per minute per style
-RATE_LIMIT_CONCISE=10
-RATE_LIMIT_DETAILED=3
+SUMMARIZER_MODEL=gpt-4.1
 
 # =============================================================================
 # SEARCH SETTINGS
 # =============================================================================
 # Enable reranking for better search quality
 RERANK_ENABLED=false
+
+# =============================================================================
+# ANSWER GENERATION SETTINGS
+# =============================================================================
+# OpenAI API parameters for answer generation
+ANSWER_MAX_TOKENS=1024
+ANSWER_TEMPERATURE=0.2
+ANSWER_TOP_P=1
+ANSWER_PRESENCE_PENALTY=0
+ANSWER_FREQUENCY_PENALTY=0
+
+# =============================================================================
+# RATE LIMITING
+# =============================================================================
+# Rate limit window in seconds
+RATE_LIMIT_WINDOW=60
+
+# Maximum requests per window
+RATE_LIMIT_MAX=90
 
 # =============================================================================
 # AUTHENTICATION (Optional)
@@ -75,7 +56,6 @@ RERANK_ENABLED=false
 APP_PASSWORD=
 
 # =============================================================================
-# DEVELOPMENT
+# ENVIRONMENT
 # =============================================================================
-# Set by Next.js automatically, but can be overridden
-# NODE_ENV=development
+NODE_ENV=production
