--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -3,43 +3,48 @@
 # =============================================================================
 # Copy this to .env.local for local development
 # See .env.example for full documentation of all variables
+#
+# NOTE: The frontend NEVER connects directly to Postgres.
+# All database operations go through the backend API via BACKEND_API_URL.
 # =============================================================================
 
 # =============================================================================
 # BACKEND API (Required)
 # =============================================================================
-# Local backend (if running backend locally)
-BACKEND_API_URL=http://localhost:8001
-
-# Or use production backend for testing:
-# BACKEND_API_URL=https://drchaffee-backend.onrender.com
-
-# =============================================================================
-# DATABASE (Optional - only for answer caching)
-# =============================================================================
-# Note: Stats now come from the backend /stats endpoint via BACKEND_API_URL.
-# DATABASE_URL is only needed if you want local answer caching in the frontend.
-# In production, the backend handles all database access.
-# Local PostgreSQL (optional):
-# DATABASE_URL=postgresql://postgres:password@localhost:5432/askdrchaffee
+BACKEND_API_URL=http://46.224.35.133:3000
 
 # =============================================================================
 # OPENAI API (Required for answer generation)
 # =============================================================================
-OPENAI_API_KEY=sk-proj-your-openai-key-here
-SUMMARIZER_MODEL=gpt-4o-mini
+OPENAI_API_KEY=
+SUMMARIZER_MODEL=gpt-4.1
 
 # =============================================================================
-# ANSWER SETTINGS
+# SEARCH SETTINGS
 # =============================================================================
-ANSWER_ENABLED=true
-ANSWER_TOPK=100
-ANSWER_TTL_HOURS=336
-ANSWER_CACHE_TTL_HOURS=336
-ANSWER_STYLE_DEFAULT=concise
+RERANK_ENABLED=false
+
+# =============================================================================
+# ANSWER GENERATION SETTINGS
+# =============================================================================
+ANSWER_MAX_TOKENS=1024
+ANSWER_TEMPERATURE=0.2
+ANSWER_TOP_P=1
+ANSWER_PRESENCE_PENALTY=0
+ANSWER_FREQUENCY_PENALTY=0
+
+# =============================================================================
+# RATE LIMITING
+# =============================================================================
+RATE_LIMIT_WINDOW=60
+RATE_LIMIT_MAX=90
 
 # =============================================================================
 # AUTHENTICATION (Optional)
 # =============================================================================
-# Leave empty to disable password protection
 APP_PASSWORD=
+
+# =============================================================================
+# ENVIRONMENT
+# =============================================================================
+NODE_ENV=production
