feat: harden authentication and protect backend RAG endpoints
Security improvements:

1. Tuning endpoints (backend/api/tuning.py):
   - All sensitive routes now protected with require_tuning_auth dependency
   - Includes: /config, /summarizer/config, /instructions/*, /models/*, /search/*

2. Admin API key (backend/api/main.py):
   - Removed insecure default for ADMIN_API_KEY
   - App logs warning if not set (admin endpoints inaccessible)
   - Fails with 503 if admin endpoint called without key configured

3. Internal API key for RAG endpoints (backend/api/main.py):
   - New INTERNAL_API_KEY env var protects /search, /answer, /embed, /stats
   - Frontend API routes inject X-Internal-Key header
   - Prevents direct public access to backend RAG endpoints
   - Dev mode: skips check if not set (with warning)

4. Signed session tokens (frontend/src/utils/authToken*.ts):
   - Replaced weak 64-char random tokens with HMAC-SHA256 signed tokens
   - Token format: base64url(payload).base64url(signature)
   - Payload includes iat (issued at) and exp (expiration, 7 days)
   - Timing-safe signature comparison
   - Edge Runtime compatible version for middleware

5. Updated auth endpoints:
   - /api/auth/login: generates signed tokens, sets cookie
   - /api/auth/verify: validates signature and expiration
   - middleware.ts: verifies tokens on protected routes

6. Frontend API routes (search.ts, answer.ts):
   - Inject X-Internal-Key header for all backend requests

Environment variables required in production:
- APP_PASSWORD: Main app password
- APP_SESSION_SECRET: Secret for signing session tokens
- TUNING_PASSWORD: Tuning dashboard password
- ADMIN_API_KEY: Admin endpoint authentication
- INTERNAL_API_KEY: Frontend-to-backend authentication (must match)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -123,7 +123,21 @@ OPENAI_API_KEY=sk-proj-your_key_here
 SUMMARIZER_MODEL=gpt-3.5-turbo
 
 # =============================================================================
-# AUTHENTICATION
+# AUTHENTICATION (Required in production)
 # =============================================================================
-# Simple password for admin endpoints
-APP_PASSWORD=your_secure_password_here
+# Password for tuning dashboard access
+# Set to a secure password - users must enter this to access /tuning
+TUNING_PASSWORD=your_secure_tuning_password_here
+
+# Admin API key for protected admin endpoints (upload, sync, jobs)
+# MUST be set in production - no insecure default allowed
+# Used with: Authorization: Bearer <ADMIN_API_KEY>
+# Generate with: openssl rand -base64 32
+ADMIN_API_KEY=
+
+# Internal API key for RAG/search endpoint protection
+# Prevents direct public access to backend /search, /answer, /embed endpoints
+# Frontend Next.js API routes inject this header when proxying requests
+# Must match INTERNAL_API_KEY in frontend/.env.local
+# Generate with: openssl rand -base64 32
+INTERNAL_API_KEY=
