--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -49,11 +49,22 @@ RATE_LIMIT_WINDOW=60
 RATE_LIMIT_MAX=90
 
 # =============================================================================
-# AUTHENTICATION (Optional)
+# AUTHENTICATION (Required in production)
 # =============================================================================
 # Simple password protection for the frontend
 # Leave empty to disable password protection
 APP_PASSWORD=
+
+# Secret for signing session tokens (HMAC-SHA256)
+# MUST be set in production - use a long random string (32+ chars)
+# Generate with: openssl rand -base64 32
+APP_SESSION_SECRET=
+
+# Internal API key for backend authentication
+# This prevents direct public access to backend RAG endpoints
+# Must match INTERNAL_API_KEY in backend/.env
+# Generate with: openssl rand -base64 32
+INTERNAL_API_KEY=
 
 # =============================================================================
 # ENVIRONMENT
