refactor: move OpenAI usage to backend-only and simplify frontend proxy architecture
Frontend answer.ts reduced from 934 lines to 160 lines:
- Removed all OpenAI client usage
- Removed USE_MOCK_MODE logic
- Removed custom summarizer logic
- Removed chunk splitting/clustering logic
- Removed rate limiting (backend handles this)
- Removed answer caching (backend handles this)

Backend now uses the curated Dr. Chaffee RAG prompt:
- Migrated carefully tuned system prompt from frontend
- Style-specific word counts (concise: 350-450, detailed: 900-1100)
- Citation format requirements [video_id@mm:ss]
- Authentic Chaffee voice guidelines
- JSON response format with confidence scoring

Frontend is now a pure proxy:
- /api/search → backend /search
- /api/answer → backend /answer
- /api/stats → backend /stats
- /api/tuning/* → backend tuning endpoints

All OpenAI calls, embeddings, and answer generation happen on the backend only.
Frontend no longer needs OPENAI_API_KEY environment variable.

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -2,49 +2,36 @@
 # DR. CHAFFEE AI - FRONTEND LOCAL DEVELOPMENT
 # =============================================================================
 # Copy this to .env.local for local development
-# See .env.example for full documentation of all variables
 #
-# NOTE: The frontend NEVER connects directly to Postgres.
-# All database operations go through the backend API via BACKEND_API_URL.
+# ARCHITECTURE:
+# - Frontend is a thin proxy to the backend
+# - Frontend NEVER connects directly to Postgres or OpenAI
+# - All database, embedding, and LLM operations happen on the backend
 # =============================================================================
 
 # =============================================================================
 # BACKEND API (Required)
 # =============================================================================
-BACKEND_API_URL=http://46.224.35.133:3000
+BACKEND_API_URL=http://localhost:8001
 
 # =============================================================================
-# OPENAI API (Required for answer generation)
+# INTERNAL API KEY (Required)
 # =============================================================================
-OPENAI_API_KEY=
-SUMMARIZER_MODEL=gpt-4.1
-
-# =============================================================================
-# SEARCH SETTINGS
-# =============================================================================
-RERANK_ENABLED=false
-
-# =============================================================================
-# ANSWER GENERATION SETTINGS
-# =============================================================================
-ANSWER_MAX_TOKENS=1024
-ANSWER_TEMPERATURE=0.2
-ANSWER_TOP_P=1
-ANSWER_PRESENCE_PENALTY=0
-ANSWER_FREQUENCY_PENALTY=0
-
-# =============================================================================
-# RATE LIMITING
-# =============================================================================
-RATE_LIMIT_WINDOW=60
-RATE_LIMIT_MAX=90
+# Must match the INTERNAL_API_KEY on the backend
+# Used for authenticating frontend→backend requests
+INTERNAL_API_KEY=
 
 # =============================================================================
 # AUTHENTICATION (Optional)
 # =============================================================================
+# Password to access the frontend (leave empty for no password)
 APP_PASSWORD=
+# Secret for session cookies (generate with: openssl rand -hex 32)
+APP_SESSION_SECRET=
 
 # =============================================================================
-# ENVIRONMENT
+# NOTE: The following are NOT needed on the frontend:
+# - OPENAI_API_KEY (backend handles all OpenAI calls)
+# - DATABASE_URL (backend handles all database operations)
+# - EMBEDDING_* variables (backend handles embeddings)
 # =============================================================================
-NODE_ENV=production
