Fix embeddings: CPU-only default, correct dimensions, disable CUDA on Hetzner, unify config, add safety checks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -90,10 +90,22 @@ PYANNOTE_CLUSTERING_THRESHOLD=0.3
 # EMBEDDINGS (Semantic Search)
 # =============================================================================
 # Profile: 'quality' (GTE-Qwen2-1.5B, 1536-dim) or 'speed' (BGE-Small, 384-dim)
-EMBEDDING_PROFILE=quality
+# Default: 'speed' (BGE-Small) - recommended for most deployments
+EMBEDDING_PROFILE=speed
 
 # Device: cuda (GPU), cpu (CPU)
-EMBEDDING_DEVICE=cuda
+# Default: auto-detect (uses CUDA if available, otherwise CPU)
+EMBEDDING_DEVICE=cpu
+
+# FORCE_CPU_ONLY: Set to '1' or 'true' to completely disable CUDA
+# This is REQUIRED for CPU-only deployments (e.g., Hetzner) where PyTorch
+# is not compiled with CUDA support. Prevents "Torch not compiled with CUDA" errors.
+# When enabled, torch.cuda.is_available() is monkey-patched to always return False.
+FORCE_CPU_ONLY=1
+
+# Explicit dimension override (optional - normally set by profile)
+# Only set this if you need to override the profile default
+# EMBEDDING_DIMENSIONS=384
 
 # =============================================================================
 # PROCESSING SETTINGS
