fix: ensure backend runs alembic migrations at startup
## Problem
The /tuning/search page showed 'Database Migration Required' even though
entrypoint.sh was supposed to run migrations automatically. The migration
018_search_config.py was not being applied.

## Root Causes Fixed

1. **Migration chain broken**: 018_search_config.py had down_revision = '017'
   but should have been down_revision = '017_drop_segment_embeddings'

2. **env.py .env loading**: In Docker, the app is at /app but env.py tried
   to load .env from project root which doesn't exist. Now tries multiple
   paths and gracefully handles missing .env (Docker passes env vars directly)

3. **docker-compose volume override**: Both compose files mount ./backend:/app
   which overwrites the baked-in entrypoint.sh. Added explicit command:
   to ensure entrypoint.sh runs even with volume mounts

4. **Error messages outdated**: Referenced '015_search_config.sql' but the
   actual migration is '018_search_config.py'. Updated to say 'restart container'

## Changes

- backend/migrations/versions/018_search_config.py: Fix down_revision
- backend/migrations/env.py: Robust .env loading for Docker
- backend/entrypoint.sh: Better logging, DATABASE_URL validation, explicit error handling
- docker-compose.yml: Add command: to run entrypoint.sh with volume mount
- docker-compose.dev.yml: Same fix for dev environment
- backend/api/tuning.py: Update error messages
- backend/migrations/README.md: Add verification section

## Verification
After deploying, container logs should show:
- 'Running Alembic migrations (alembic upgrade head)...'
- 'Alembic migrations completed successfully'
- /tuning/search should NOT show migration warning
- Summarizer model selection (/tuning/models) still works

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -64,6 +64,9 @@ services:
       - ./backend:/app
       - ./.env:/app/.env
       - ./cookies.txt:/app/cookies.txt:ro
+    # Explicitly run entrypoint.sh to ensure migrations run
+    # The volume mount overwrites /app, so we use bash to run the local entrypoint.sh
+    command: ["bash", "/app/entrypoint.sh"]
     depends_on:
       postgres:
         condition: service_healthy
