--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,14 @@
     "dev:no-trace": "next dev --no-trace",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "playwright:install": "playwright install --with-deps"
   },
   "dependencies": {
     "@types/node": "^20.10.0",
@@ -22,7 +29,13 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^14.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.55.0",
-    "eslint-config-next": "^15.5.0"
+    "eslint-config-next": "^15.5.0",
+    "jsdom": "^24.0.0",
+    "vitest": "^1.2.0"
   }
 }
