--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-# Pytest configuration for Ask Dr. Chaffee backend tests
+# Pytest configuration for Ask Dr Chaffee backend tests
 
 # Test discovery patterns
 python_files = test_*.py
