feat: unify RAG and embedding model configs under config/models
- Create backend/config/models/ directory for centralized model configs
- Add rag_models.json with GPT-4.1, GPT-4o, GPT-3.5 models and metadata
- Move embedding_models.json to config/models/ with recommended/production flags
- Create model_catalog.py helper module with caching and fallback defaults
- Add GET /api/tuning/models/rag endpoint for frontend model selection
- Add GET /api/tuning/models/embeddings endpoint for embedding model catalog
- Wire RAG profile create/update to validate model_name against catalog
- Update /api/answer to use catalog for model selection with priority order:
  profile > SUMMARIZER_MODEL env > OPENAI_MODEL env > catalog default
- Log model source (profile/env/catalog_default) with each answer
- Update frontend profiles page to fetch models from API with fallback
- Show recommended models with star indicator in dropdown
- Update .gitignore to track backend/config/models/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,8 @@ backend/backend/
 # Model cache
 .cache/
 models/
+# But track config/models for model catalog JSON files
+!backend/config/models/
 
 # Audio files (temporary downloads)
 *.mp3
