docs: document ANSWER_CACHE_ENABLED flag and env precedence
- Make env precedence explicit in embedding_config.py comments
- Add ANSWER_CACHE_ENABLED to .env.example with default false
- Update ARCHITECTURE_EMBEDDINGS.md with precedence documentation

Precedence: ANSWER_CACHE_ENABLED env > embedding_models.json > default (false)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -108,6 +108,14 @@ FORCE_CPU_ONLY=1
 # EMBEDDING_DIMENSIONS=384
 
 # =============================================================================
+# ANSWER CACHE (Optional)
+# =============================================================================
+# Enable semantic caching of AI-generated answers
+# When disabled (default), cache lookup/save endpoints are no-ops
+# Precedence: env var > embedding_models.json > default (false)
+ANSWER_CACHE_ENABLED=false
+
+# =============================================================================
 # PROCESSING SETTINGS
 # =============================================================================
 # Skip YouTube Shorts (usually not useful content)
