feat: add custom instructions to summariser with explicit profile/instruction logging
Changes:
- Add ResolvedCustomInstructions dataclass to track instruction_id, name, text, length
- Replace _get_custom_instructions() with resolve_custom_instructions() that returns full metadata
- Update _build_chaffee_system_prompt() to return resolved instructions tuple
- Add comprehensive logging chain:
  * RAGProfileResolved: profile_id, name, version, source, auto_select, summarizer_model
  * CustomInstructionsResolved: instruction_id, name, chars
  * SystemPrompt: profile_id, profile_name, version, instruction_id, instructions_len, total_len
  * SummarizerCall: now includes instruction_id
- Add optional debug preview behind LOG_SUMMARIZER_PREVIEW env var
- Add LOG_SUMMARIZER_PREVIEW to .env.example

Design:
- Custom instructions are global (not per-model)
- Per-model complexity stays in RAG profiles
- Logging chain makes it crystal-clear what combination generated each answer

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -116,6 +116,13 @@ FORCE_CPU_ONLY=1
 ANSWER_CACHE_ENABLED=false
 
 # =============================================================================
+# LOGGING & DEBUG
+# =============================================================================
+# Enable debug preview of system prompt in logs (default: false)
+# When enabled, logs first 1500 chars of system prompt at DEBUG level
+LOG_SUMMARIZER_PREVIEW=false
+
+# =============================================================================
 # PROCESSING SETTINGS
 # =============================================================================
 # Skip YouTube Shorts (usually not useful content)
