feat(auth): add Discord OAuth with guild role gating for main app (MVP)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -168,3 +168,28 @@ ADMIN_API_KEY=
 # Must match INTERNAL_API_KEY in frontend/.env.local
 # Generate with: openssl rand -base64 32
 INTERNAL_API_KEY=
+
+# =============================================================================
+# DISCORD OAUTH (Optional - for Discord login on main app)
+# =============================================================================
+# Create a Discord application at: https://discord.com/developers/applications
+# Set OAuth2 redirect URI to: https://yourdomain.com/auth/discord/callback
+
+# Discord application credentials
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
+# OAuth redirect URI (must match Discord app settings)
+DISCORD_REDIRECT_URI=http://localhost:8000/auth/discord/callback
+
+# Guild (server) ID that users must be a member of
+DISCORD_GUILD_ID=
+
+# Comma-separated list of role IDs that grant access (user needs at least one)
+DISCORD_ALLOWED_ROLE_IDS=
+
+# OAuth scopes (do not change unless you know what you're doing)
+DISCORD_OAUTH_SCOPES=identify guilds.members.read
+
+# Frontend URL for redirects after auth
+FRONTEND_APP_URL=http://localhost:3000
