--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -67,6 +67,12 @@ APP_SESSION_SECRET=
 INTERNAL_API_KEY=
 
 # =============================================================================
+# DISCORD OAUTH (Optional - for Discord login on main app)
+# =============================================================================
+# Enable Discord login button on main app (set to 'true' to enable)
+DISCORD_LOGIN_ENABLED=false
+
+# =============================================================================
 # ENVIRONMENT
 # =============================================================================
 NODE_ENV=production
