feat(auth): unify discord oauth redirect and role-based login
Discord OAuth Configuration:
- Fix default scopes to 'identify guilds guilds.members.read' (was missing 'guilds')
- Add detailed docstring to DiscordConfig with env var documentation
- Add set-based role lookup for O(1) membership checks

API Improvements:
- Add 10-second timeout to all Discord API calls (token exchange, user fetch, guild member)
- Handle httpx.TimeoutException explicitly
- Improve logging: log redirect_uri on login, partial IDs only (last 6 chars), role counts
- Remove sensitive data from error logs (no response bodies)

Documentation:
- Update DISCORD_AUTH.md with architecture section and URL table
- Clarify production redirect URI includes /api prefix (Coolify mount point)
- Update backend/.env.example with detailed comments and correct scopes
- Fix frontend/.env.example to use localhost instead of hardcoded IP
- Update production checklist with specific URLs

Files changed:
- backend/api/services/discord_client.py - timeout, logging, scopes
- backend/api/routers/auth_discord.py - log redirect_uri
- backend/.env.example - documentation and scopes
- frontend/.env.example - localhost default
- DISCORD_AUTH.md - architecture docs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -173,23 +173,39 @@ INTERNAL_API_KEY=
 # DISCORD OAUTH (Optional - for Discord login on main app)
 # =============================================================================
 # Create a Discord application at: https://discord.com/developers/applications
-# Set OAuth2 redirect URI to: https://yourdomain.com/auth/discord/callback
+# Application: "AskDrChaffee" (do not confuse with "Dr Chaffee AI")
+#
+# IMPORTANT: The redirect URI must be registered in Discord Developer Portal:
+#   OAuth2 → Redirects → Add your DISCORD_REDIRECT_URI value
+#
+# Dev example:  http://localhost:8000/auth/discord/callback
+# Prod example: https://askdrchaffee.com/api/auth/discord/callback
+#               (note: /api prefix because backend is mounted under /api in Coolify)
 
-# Discord application credentials
+# Discord application credentials (from Discord Developer Portal → OAuth2)
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-# OAuth redirect URI (must match Discord app settings)
+# OAuth redirect URI - MUST match exactly what's registered in Discord app
+# Dev:  http://localhost:8000/auth/discord/callback
+# Prod: https://askdrchaffee.com/api/auth/discord/callback
 DISCORD_REDIRECT_URI=http://localhost:8000/auth/discord/callback
 
 # Guild (server) ID that users must be a member of
+# Get this by enabling Developer Mode in Discord, then right-click server → Copy Server ID
 DISCORD_GUILD_ID=
 
 # Comma-separated list of role IDs that grant access (user needs at least one)
+# Get these by right-clicking a role in Server Settings → Roles → Copy Role ID
 DISCORD_ALLOWED_ROLE_IDS=
 
-# OAuth scopes (do not change unless you know what you're doing)
-DISCORD_OAUTH_SCOPES=identify guilds.members.read
+# OAuth scopes - required for user info and role checking
+# identify: get user profile
+# guilds: list user's guilds
+# guilds.members.read: check user's roles in a specific guild
+DISCORD_OAUTH_SCOPES=identify guilds guilds.members.read
 
-# Frontend URL for redirects after auth
+# Frontend URL for redirects after successful auth
+# Dev:  http://localhost:3000
+# Prod: https://askdrchaffee.com
 FRONTEND_APP_URL=http://localhost:3000
