--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,7 +12,9 @@
 # BACKEND API (Required)
 # =============================================================================
 # URL to the FastAPI backend service
-BACKEND_API_URL=http://46.224.35.133:3000
+# Dev:  http://localhost:8000
+# Prod: Set via Coolify environment variables (e.g., internal Docker network URL)
+BACKEND_API_URL=http://localhost:8000
 
 # =============================================================================
 # OPENAI API (Required for answer generation)
