feat(discord): add json-based role tiers with colors and show tier badge in UI
Backend:
- Add backend/config/discord_roles.json with role ID → tier mapping + colors
  - paragon_of_virtue: #C27C0E (bronze/gold)
  - exclusive: #F1C40F (yellow)
  - vip: #95A5A6 (silver)
  - all_access: #3498DB (blue)
- Add backend/api/services/discord_roles_loader.py with @lru_cache loader
  - resolve_user_tier(): maps user roles to highest-priority tier
  - get_tier_label(): returns human-readable tier name
  - get_tier_color(): returns hex color for tier
  - get_tier_info(): returns full tier info (tier, name, color)
  - resolve_user_tier_with_info(): convenience helper returning full info
  - get_all_tiers(): returns all tiers with id, name, color
- Add migration 026_add_discord_tier.py: adds discord_tier column to users
- Update auth_discord.py callback:
  - Resolve tier from member roles on login
  - Store tier in users.discord_tier column
  - Set discord_user_id cookie for /me endpoint
- Add GET /auth/discord/me endpoint: returns user info with tier + color
- Add GET /auth/discord/tiers endpoint: returns all tiers with colors
- Update .env.example with tier system documentation

Frontend:
- Add pages/api/auth/discord/me.ts: proxy to backend /me
- Add pages/api/auth/discord/tiers.ts: proxy to backend /tiers
- Update PasswordGate.tsx:
  - Add discord_tier_color to DiscordUser interface
  - Fetch Discord user info after auth
  - Display colored pill badge using discord_tier_color as backgroundColor

Existing behavior preserved:
- DISCORD_ALLOWED_ROLE_IDS still controls login access
- Password login unaffected
- OAuth flow unchanged

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -209,3 +209,35 @@ DISCORD_OAUTH_SCOPES=identify guilds guilds.members.read
 # Dev:  http://localhost:3000
 # Prod: https://askdrchaffee.com
 FRONTEND_APP_URL=http://localhost:3000
+
+# =============================================================================
+# DISCORD MEMBERSHIP TIERS
+# =============================================================================
+# Tier configuration is stored in: backend/config/discord_roles.json
+#
+# The JSON file maps Discord role IDs to membership tiers with colors:
+#   - Each role ID maps to { tier, name, color }
+#   - tiers_priority defines which tier wins when user has multiple roles
+#   - Highest priority tier is returned (first in the list)
+#
+# Example JSON structure:
+#   {
+#     "roles": {
+#       "1011035139658231949": { "tier": "paragon_of_virtue", "name": "Paragon of Virtue", "color": "#C27C0E" }
+#     },
+#     "tiers_priority": ["paragon_of_virtue", "exclusive", "vip", "all_access"]
+#   }
+#
+# How it works:
+#   1. DISCORD_ALLOWED_ROLE_IDS still controls who can log in (access gate)
+#   2. discord_roles.json defines tier metadata (name, color) + priority ordering
+#   3. On login, user's roles are resolved to their highest-priority tier
+#   4. Tier is stored in users.discord_tier column
+#   5. /auth/discord/me returns discord_tier, discord_tier_label, discord_tier_color
+#   6. /auth/discord/tiers returns all tiers with id, name, color
+#
+# To add/modify tiers:
+#   1. Edit backend/config/discord_roles.json
+#   2. Add role ID with tier, name, and color (hex format)
+#   3. Update tiers_priority if needed
+#   4. No code changes or restart required (config is cached, clears on restart)
