fix: resolve blank screen in production and harden backend API routing
- Add timeout handling to PasswordGate to prevent infinite loading
  - 8-second timeout falls back to showing content if auth check hangs
  - Comprehensive logging for debugging auth flow issues
  - Graceful error handling that shows content instead of blank screen

- Fix Discord OAuth login proxy to not expose internal backend URL
  - Fetch OAuth redirect URL server-side instead of browser redirect
  - Forward cookies properly for state management
  - Add proper error handling and timeout

- Centralize environment variable access in frontend/src/utils/env.ts
  - Single source of truth for BACKEND_API_URL and INTERNAL_API_KEY
  - Logs configuration on startup for debugging
  - All API routes now use centralized env utilities

- Add debug health check page at /debug/health
  - Always renders content (never blank)
  - Shows status of /api/stats and /api/auth/check
  - Useful for diagnosing production issues

- Update .env.local.example with production configuration docs
  - Document correct BACKEND_API_URL for local vs production
  - Add Discord OAuth configuration section

- Improve logging across all API proxy routes
  - Log backend URL being called
  - Log query parameters (truncated for privacy)
  - Better error messages for debugging

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,5 +1,5 @@
 # =============================================================================
-# DR. CHAFFEE AI - FRONTEND LOCAL DEVELOPMENT
+# DR. CHAFFEE AI - FRONTEND ENVIRONMENT CONFIGURATION
 # =============================================================================
 # Copy this to .env.local for local development
 #
@@ -12,7 +12,11 @@
 # =============================================================================
 # BACKEND API (Required)
 # =============================================================================
-BACKEND_API_URL=http://localhost:8001
+# Local development:
+BACKEND_API_URL=http://localhost:8000
+
+# Production (Vercel): Set this in Vercel environment variables
+# BACKEND_API_URL=https://app.askdrchaffee.com
 
 # =============================================================================
 # INTERNAL API KEY (Required)
@@ -30,8 +34,16 @@ APP_PASSWORD=
 APP_SESSION_SECRET=
 
 # =============================================================================
+# DISCORD OAUTH (Optional)
+# =============================================================================
+# Enable Discord login button on the login page
+# Backend must also be configured with Discord OAuth credentials
+DISCORD_LOGIN_ENABLED=false
+
+# =============================================================================
 # NOTE: The following are NOT needed on the frontend:
 # - OPENAI_API_KEY (backend handles all OpenAI calls)
 # - DATABASE_URL (backend handles all database operations)
 # - EMBEDDING_* variables (backend handles embeddings)
+# - DISCORD_CLIENT_ID/SECRET (backend handles OAuth)
 # =============================================================================
