Fix tuning dashboard auth: Discord OAuth sets tuning_auth cookie, fix 401 loop, improve error handling
FIXES:
- Discord OAuth callback now sets tuning_auth=authenticated cookie for tuning dashboard access
- Fixed infinite 401 request loop in useTuningData by:
  - Removing 'data' from useCallback dependencies (was causing re-renders)
  - Adding hasFetchedRef to prevent re-fetches on mount
  - Tracking global unauthorized state to prevent retry loops
  - Adding isUnauthorized field to hook return value
- Fixed password login not resetting unauthorized state after successful auth
- Unified BACKEND_API_URL usage across all tuning auth endpoints

IMPROVEMENTS:
- All tuning pages now show clear 'Authentication required' message instead of loading spinners
- Added comprehensive logging to debug auth issues:
  - Frontend proxy logs cookie values and backend responses
  - Backend guard logs cookie values and all cookies
  - Auth endpoints log cookie names being set
- Added auth endpoint skip list to catch-all proxy (auth/status, auth/logout)
- Reset global unauthorized state and clear caches after successful password login

CHANGES:
Backend:
- backend/api/routers/auth_discord.py: Added tuning_auth cookie to Discord callback
- backend/api/tuning.py: Added debug logging to require_tuning_auth guard

Frontend:
- frontend/src/hooks/useTuningData.ts: Fixed 401 loop with global unauthorized tracking
- frontend/src/app/tuning/layout.tsx: Reset unauthorized state on redirect to auth
- frontend/src/app/tuning/auth/page.tsx: Reset unauthorized state and clear caches after login
- frontend/src/app/tuning/models/page.tsx: Added isUnauthorized state handling
- frontend/src/app/tuning/profiles/page.tsx: Added isUnauthorized state handling
- frontend/src/app/tuning/search/page.tsx: Added isUnauthorized state handling
- frontend/src/components/CustomInstructionsEditor.tsx: Added loading and unauthorized state handling
- frontend/src/pages/api/tuning/[...path].ts: Added auth endpoint skip li

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -179,8 +179,8 @@ INTERNAL_API_KEY=
 #   OAuth2 → Redirects → Add your DISCORD_REDIRECT_URI value
 #
 # Dev example:  http://localhost:8000/auth/discord/callback
-# Prod example: https://askdrchaffee.com/api/auth/discord/callback
-#               (note: /api prefix because backend is mounted under /api in Coolify)
+# Prod example: https://app.askdrchaffee.com/api/auth/discord/callback
+#               (note: app. subdomain + /api prefix because backend is at app.askdrchaffee.com via Traefik)
 
 # Discord application credentials (from Discord Developer Portal → OAuth2)
 DISCORD_CLIENT_ID=
@@ -188,7 +188,7 @@ DISCORD_CLIENT_SECRET=
 
 # OAuth redirect URI - MUST match exactly what's registered in Discord app
 # Dev:  http://localhost:8000/auth/discord/callback
-# Prod: https://askdrchaffee.com/api/auth/discord/callback
+# Prod: https://app.askdrchaffee.com/api/auth/discord/callback
 DISCORD_REDIRECT_URI=http://localhost:8000/auth/discord/callback
 
 # Guild (server) ID that users must be a member of
